# geant4

./: .gitignore  README.md
INTEREST/icsd/: CMakeLists.txt  icsd.out  run_geant4.sh
INTEREST/icsd/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  StackingAction.hh
INTEREST/icsd/macros/: icsdJC.mac  icsdST.mac
INTEREST/icsd/scripts/: plotC12.C  plotDeuteron.C  plotDeuteronNew.C  plotHe4.C  plotHe4New.C  plotLi6.C  plotLi7.C  plotLi7.check  plotProton.C
INTEREST/icsd/src/: DetectorConstruction.cc  PhysicsList.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
INTEREST/range/: CMakeLists.txt  combine_txt.py  create_parameters.py  get_data.py  parameters.txt  range.in  range.out  run_geant4.sh  run_sim.py
INTEREST/range/root/: C12_DNA2.txt  C12_S4.txt  alpha_DNA2.txt  alpha_DNA4.txt  alpha_DNA6.txt  alpha_DNA8.txt  alpha_S4.txt  e+_DNA4.txt  e+_S4.txt  e-_DNA2.txt  e-_DNA4.txt  e-_DNA6.txt  e-_DNA8.txt  e-_S4.txt  proton_DNA2.txt  proton_DNA4.txt  proton_DNA6.txt  proton_DNA8.txt  proton_S4.txt
INTEREST/range/scripts/: geant4-dev.code-workspace  plotAlpha.C  plotAlphaDetour.C  plotAlphaRange.C  plotC12.C  plotC12Detour.C  plotC12Range.C  plotElectronDetour.C  plotElectronRange.C  plotPositronDetour.C  plotPositronRange.C  plotProtonDetour.C  plotProtonRange.C
INTEREST/range/src/: HistoManager.cc  PhysicsList.cc  Run.cc  RunAction.cc
INTEREST/spower/: CMakeLists.txt  create_parameters.py  run_geant4.sh  spower.in  spower.out  submit.sub
INTEREST/spower/include/: PhysicsList.hh
INTEREST/spower/scripts/: plotAlpha.C  plotC12.C  (+3 more)
START/ionradial/: CMakeLists.txt  GNUmakefile  ionradialDNA6.in  ionradialDNA8.in
START/ionradial/include/: AccMax.hh  EventAction.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
START/ionradial/scripts/: Ne20RadialDose.C  alphaRadialDoseStandard.C  clusteringKMGA.C  protonRadialDose.C  simplifyRoot.C  test.C
START/ionradial/src/: ActionInitialization.cc  DetectorConstruction.cc  RunAction.cc  TrackingAction.cc
START/ionrange/: ionrange.cc  ionrangeDNA.in  vis.mac
Self-Education/learn_root/: MacroFile.C
chemistry/chem6/: parameters.txt  run.sh
icsd_pdb/: CMakeLists.txt  icsd.mac  parameters.txt  run.sh
icsd_pdb/include/: DetectorConstruction.hh  DetectorMessenger.hh  PhysicsList.hh
icsd_pdb/input/: 1kx5.cif  6S7Z.cif  6WHT.cif  6bno.cif  6i5i.cif  6tar.cif
icsd_pdb/jobs/: geant4.sub  job_flow.dag
icsd_pdb/scripts/: check_overlaps.py  config.py  coords_parser.py  main.py  run_geant4.sh  visualize.py
icsd_pdb/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  RunAction.cc
(+193 files in other folders)
